--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -25,14 +25,16 @@ body {
 }
 
 /* Navbar */
-.navbar {
-    width: 100%;
-    padding: 15px 50px;
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #25282c;
-    box-sizing: border-box;
+    padding: 12px 40px;
+    background: var(--card-bg);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    margin-bottom: 40px;
+    border: 1px solid rgba(255,255,255,0.5);
 }
 
 .nav-links a {
@@ -79,7 +81,7 @@ input, select {
     background: transparent;
     border: none;
     border-bottom: 1px solid var(--border-color);
-    color: white;
+    color: rgb(125, 125, 125);
     padding: 8px 0;
     outline: none;
 }
